@@ -1,140 +1,113 @@
 # SisCaLivros
 
-O **SisCaLivros** é uma aplicação de desktop para organização de livros de uma biblioteca, desenvolvida com Java e JavaFX.
+O **SisCaLivros** é uma aplicação de desktop para organização de livros de uma biblioteca, desenvolvida com **Java** e **JavaFX**.
 
 ---
 
 ## Instalação do SisCaLivros
 
-Você pode instalar o SisCaLivros de duas maneiras:
+### Requisitos mínimos
 
-1. **Clonando o repositório do GitHub.**
-2. **A partir dos arquivos fonte.**
-
-### Requisitos gerais
-
-- **Sistema operacional**: Linux ou Windows 10.
-- **Java Development Kit (JDK)**: Versão 21 ou superior.
+- **Sistema operacional**: Fedora 41.
+- **Java Development Kit (JDK)**: Versão 21.
 - **JavaFX SDK**: Versão 21.0.5.
 - **SQLite JDBC Driver**: Versão 3.47.1.0.
+- **Git**: Para clonar o repositório.
 
 ---
 
-### Opção 1: Instalação a partir do GitHub
+### Instalação via repositório Git
 
-#### Passos para Linux
+Siga os passos abaixo para configurar e instalar o projeto no Fedora:
 
-1. **Instale o JDK 21**
-   ```bash
-   sudo apt update
-   sudo apt install openjdk-21-jdk
-   ```
+#### 1. Clone o repositório
 
-2. **Baixe e configure o JavaFX SDK**
-   - Faça o download do [JavaFX SDK 21.0.5](https://openjfx.io).
-   - Extraia o arquivo em `/opt/javafx-sdk`:
-     ```bash
-     export PATH_TO_FX=/opt/javafx-sdk/lib
-     ```
+```bash
+git clone https://github.com/jpereiratrindade/SisCaLivros.git
+cd SisCaLivros
+```
 
-3. **Clone o repositório**
-   ```bash
-   git clone https://github.com/jpereiratrindade/SisCaLivros.git
-   cd SisCaLivros
-   ```
+#### 2. Execute o script de instalação
 
-4. **Configure o SQLite JDBC Driver**
-   - Baixe o [SQLite JDBC Driver](https://bitbucket.org/xerial/sqlite-jdbc/downloads/sqlite-jdbc-3.47.1.0.jar).
-   - Coloque-o no diretório `libs`:
-     ```bash
-     mkdir -p libs
-     mv sqlite-jdbc-3.47.1.0.jar libs/
-     ```
+O projeto possui um script automatizado para preparar o ambiente e compilar o código:
 
-5. **Compile e execute**
-   ```bash
-   javac --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml -cp libs/sqlite-jdbc-3.47.1.0.jar -d bin src/**/*.java
-   java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml -cp bin:libs/sqlite-jdbc-3.47.1.0.jar Main
-   ```
+```bash
+./install.sh
+```
 
-#### Passos para Windows 10
+Este script:
+- Atualiza os pacotes do sistema.
+- Instala o **JDK 21**, **SQLite**, e outras dependências.
+- Baixa e configura o **JavaFX SDK** e o **SQLite JDBC Driver**.
+- Compila o projeto.
 
-1. **Baixe e instale o JDK 21**
-   - Faça o download do [JDK 21](https://www.oracle.com/java/technologies/javase-downloads.html) e instale-o.
-   - Configure as variáveis `JAVA_HOME` e `PATH`:
-     ```cmd
-     set JAVA_HOME=C:\Program Files\Java\jdk-21
-     set PATH=%JAVA_HOME%\bin;%PATH%
-     ```
+#### 3. Execute o aplicativo
 
-2. **Baixe e configure o JavaFX SDK**
-   - Faça o download do [JavaFX SDK 21.0.5](https://openjfx.io).
-   - Extraia o arquivo para `C:\javafx-sdk`:
-     ```cmd
-     set PATH_TO_FX=C:\javafx-sdk\lib
-     ```
+Após a instalação bem-sucedida, você pode executar o aplicativo com:
 
-3. **Clone o repositório**
-   ```cmd
-   git clone https://github.com/jpereiratrindade/SisCaLivros.git
-   cd SisCaLivros
-   ```
-
-4. **Configure o SQLite JDBC Driver**
-   - Baixe o [SQLite JDBC Driver](https://bitbucket.org/xerial/sqlite-jdbc/downloads/sqlite-jdbc-3.47.1.0.jar).
-   - Coloque-o no diretório `libs`:
-     ```cmd
-     mkdir libs
-     move sqlite-jdbc-3.47.1.0.jar libs\
-     ```
-
-5. **Compile e execute**
-   ```cmd
-   javac --module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml -cp libs/sqlite-jdbc-3.47.1.0.jar -d bin src/**/*.java
-   java --module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml -cp bin;libs/sqlite-jdbc-3.47.1.0.jar Main
-   ```
+```bash
+./run.sh
+```
 
 ---
 
-### Opção 2: Instalação a partir dos arquivos fonte
+### Detalhes dos Scripts
 
-Se você possui apenas os arquivos fonte e não deseja clonar o repositório, siga estas instruções:
+#### **install.sh**
+- Automatiza a instalação e configuração do ambiente.
+- Instala todas as dependências necessárias.
+- Prepara o ambiente para o **SisCaLivros**.
 
-1. **Organize os arquivos**
-   - Coloque os arquivos fonte em um diretório organizado da seguinte maneira:
-     ```
-     SisCaLivros/
-     ├── src/
-     │   └── (arquivos .java)
-     ├── libs/
-     │   └── sqlite-jdbc-3.47.1.0.jar
-     ```
+#### **compile.sh**
+- Realiza a compilação do código-fonte e organiza os arquivos compilados no diretório `bin`.
 
-2. **Baixe o JavaFX SDK e configure o `PATH_TO_FX`**
-   - Siga os passos descritos acima para Linux ou Windows.
+Você pode usá-los diretamente caso precise repetir as etapas de instalação ou compilação.
 
-3. **Compile e execute**
-   - No terminal (Linux) ou prompt de comando (Windows), compile e execute o projeto:
-     ```bash
-     javac --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml -cp libs/sqlite-jdbc-3.47.1.0.jar -d bin src/**/*.java
-     java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.fxml -cp bin:libs/sqlite-jdbc-3.47.1.0.jar Main
-     ```
+---
+
+### Estrutura do Projeto
+
+```plaintext
+SisCaLivros/
+├── bin/               # Arquivos compilados (gerados após compilação)
+├── images/            # Recursos visuais (ícones, imagens)
+├── main/              # Código principal (Main.java)
+├── model/             # Classes do modelo
+├── Resources/         # Arquivos FXML
+│   └── fxml/view.fxml # Interface do usuário
+├── compile.sh         # Script para compilar o projeto
+├── install.sh         # Script para instalar o projeto
+├── run.sh             # Script para executar o projeto
+└── README.md          # Documentação do projeto
+```
 
 ---
 
 ### Problemas conhecidos
 
-- Certifique-se de que as variáveis de ambiente `JAVA_HOME` e `PATH_TO_FX` estão configuradas corretamente.
-- Para evitar problemas de compatibilidade, utilize as versões recomendadas de Java e JavaFX.
+1. **Erro ao executar o `install.sh`:**
+   - Verifique se o arquivo tem permissão de execução:
+     ```bash
+     chmod +x install.sh
+     ```
+   - Certifique-se de que as variáveis de ambiente foram carregadas corretamente:
+     ```bash
+     source ~/.bashrc
+     ```
+
+2. **Erro ao executar o `run.sh`:**
+   - Verifique se o diretório `bin` contém os arquivos compilados.
+   - Certifique-se de que o JavaFX SDK está configurado corretamente.
 
 ---
 
 ### Contribuição
 
-Contribuições são bem-vindas! Sinta-se à vontade para abrir issues ou enviar pull requests.
+Contribuições são bem-vindas! Sinta-se à vontade para abrir **issues** ou enviar **pull requests**.
 
 ---
 
 ### Licença
 
-Este projeto está licenciado sob a [MIT License](LICENSE).
+Este projeto está licenciado sob a [GNU General Public License v3.0](LICENSE).
+
